--- a/money-api/src/main/resources/application.properties
+++ b/money-api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=money-api
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc:mysql://localhost/moneyapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
