--- a/money-api/src/main/resources/application.properties
+++ b/money-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=money-api
-spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/moneyapi?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/moneyapi
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
-spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=create-drop
