--- a/money-api/src/main/resources/application.properties
+++ b/money-api/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=postgres
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
