--- a/money-api/src/main/resources/application.properties
+++ b/money-api/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+spring.jackson.date-format=yyyy-MM-dd
